--- a/.gitignore
+++ b/.gitignore
@@ -466,3 +466,4 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 Preliminary-Project-Report/*.pdf
+Code/data
